# Embarcadero

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AI_CODE_STYLE_ANALYSIS.md  AI_TOOLS_SETUP_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_ORDER5_SCALABLE.md  BLOG_HEADER_PERF_FIX_SUMMARY.md  CMakeLists.txt  CODE_STYLE_ENFORCEMENT_COMPLETE.md  CONTRIBUTING.md  CRITICAL_BUG_FIXED_2026_01_28.md  CRITICAL_FIXES_2026_01_29.md  CRITICAL_FIXES_CACHE_INVALIDATION.md  CRITICAL_FIX_CONSERVATIVE_CONSUMED_THROUGH.md  CRITICAL_RING_WRAP_FIX.md  DEBUGGING_SESSION_2026_01_28_SUMMARY.md  E2E_AB_TEST_RESULTS.md  FILES_REFERENCE.md  FIRST_TASK_CURSOR_TEST.md  FIX_STATUS_2026_01_28.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_NONBLOCKING.md  NEXT_STEPS_CORRECTNESS_AND_PERFORMANCE.md  NEXT_STEPS_SENIOR_ENGINEER.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PRE_COMMIT_HOOK_IMPLEMENTATION.md  PROJECT_CONTEXT.md  QUICK_REFERENCE_SPEC_GOVERNANCE.md  README.md  ROOT_CAUSE_RING_GATING_BUG.md  SCALING_EXPERIMENT.md  SENIOR_ENGINEER_ASSESSMENT.md  SENIOR_REVIEW_FIXES_APPLIED.md  SESSION_2026_01_26_SUMMARY.md  SPEC_DEVIATION_IMPLEMENTATION_SUMMARY.md  (+13 more)
ablation_study/sequencer5/: ABLATION_RESULTS.md  ASSESSMENT_INTEGRATION_STATUS.md  CMakeLists.txt  OSDI_SOSP_QUALITY_CHECKLIST.md  README.md  ablation_full_20260204_072540.log.tmp  ablation_full_20260204_083002.log.tmp  backup_sequencer5_benchmark.cc  new_design.md  run_full_ablation.sh  run_paper_matrix.sh  run_profiles.sh  sequencer5_benchmark.cc  validate.sh
bench/kv_store/: CMakeLists.txt  distributed_kv_store.cc  distributed_kv_store.h  kv_bench_main.cc  run_kv_baseline_compare.sh
bench/micro/: CMakeLists.txt  cxl_shm_wrapper.cc  order_micro_main.cc
benchmark/gRPC_cpp/: CMakeLists.txt  benchmark.proto  client.cc  server.cc
benchmarks/: CMakeLists.txt  README.md
benchmarks/kv_store/: CMakeLists.txt  README_SMR_FIFO.md  distributed_kv_store.cc  distributed_kv_store.h  kv_bench_main.cc  main.cc  run_kv_baseline_compare.sh  run_smr_fifo_eval.sh
benchmarks/micro/: CXL_Bandwidth_Test.cc  performance_test.cc
benchmarks/sequencer/: Makefile  algorithm.md  sequencer.cpp
benchmarks/sequencer5_ablation/: CMakeLists.txt  README.md
scripts/network-emulation/: CMakeLists.txt  broker.cpp  cleanup_emulation.sh  client.cpp  run_test.sh  setup_emulation.sh
src/: CMakeLists.txt  config.h.in  tags
src/bench/: CMakeLists.txt
src/client/: .throughput_test.cc.swp  buffer.cc  buffer.h  client.cc  client.h  common.cc  common.h  corfu_client.h  corfu_ordered_token_gate.h  corfu_ordered_token_gate_test.cc  distributed_kv_store.cc  distributed_kv_store.h  kv_test.cc  latency_stats.h  main.cc  publisher.cc  publisher.h  publisher_profile.h  queue_buffer.cc  queue_buffer.h  result_writer.cc  result_writer.h  session_client_utils.h  single_MPMC.cc  spsc_ver.cc  subscriber.cc  subscriber.h  test_utils.cc  test_utils.h  throughput_test.cc
src/cmake/: corfu_replication_grpc.cmake  corfu_sequencer_grpc.cmake  corfu_token_proxy_grpc.cmake  corfu_validator_grpc.cmake  heartbeat_grpc.cmake  lazylog_metadata_grpc.cmake  lazylog_sequencer_grpc.cmake  peer_grpc.cmake  pubsub_grpc.cmake  scalog_replication_grpc.cmake  scalog_sequencer_grpc.cmake  session_proto.cmake
src/common/: ack_rf_policy.h  baseline_control_transport.cc  baseline_control_transport.h  compat_isoc23.cpp  config.h  config.h.in  config_example.cc  configuration.cc  configuration.h  durable_frontier.h  durable_sync.h  env_flags.h  failure_domain.h  fine_grained_lock.h  lazylog_append_contract.h  order_level.h  performance_profiler.cc  performance_profiler.h  performance_utils.h  replica_disk_dirs.h  scoped_fd.h  stage_trace.h  wire_formats.h
src/corfu_client/: throughput_test.cc
src/cxl_manager/: README.md  baseline_cxl_layout.h  corfu_global_sequencer.cc  corfu_mailbox_bench.cc  corfu_mailbox_messages.h  corfu_mailbox_sequencer.cc  corfu_mailbox_sequencer.h  corfu_order2_invariant_test.cc  corfu_sequencer_fifo_smoke.cc  corfu_sequencer_service.cc  corfu_sequencer_service.h  corfu_token_proxy.cc  corfu_token_proxy.h  corfu_token_proxy_smoke.cc  cxl_datastructure.h  cxl_manager.cc  cxl_manager.h  launch_global_seq.sh  lazylog_binding_core.cc  lazylog_binding_core.h  lazylog_global_sequencer.cc  lazylog_global_sequencer.h  lazylog_local_sequencer.cc  lazylog_local_sequencer.h  lazylog_mailbox_bench.cc  lazylog_mailbox_messages.h  lazylog_mailbox_sequencer.cc  lazylog_mailbox_sequencer.h  lazylog_metadata_replica.cc  lazylog_metadata_replica.h  lazylog_metadata_replica_main.cc  mailbox_global_sequencer.cc  scalog_global_ordering_core.cc  scalog_global_ordering_core.h  scalog_global_sequencer.cc  scalog_global_sequencer.h  scalog_local_sequencer.cc  scalog_local_sequencer.h  scalog_mailbox_bench.cc  scalog_mailbox_messages.h  (+2 more)
src/cxl_transport/: cxl_mailbox.cc  cxl_mailbox.h  cxl_mailbox_ring.h  cxl_mailbox_smoke.cc
src/disk_manager/: chain_replication.cc  chain_replication.h  corfu_ordered_chain.cc  corfu_ordered_chain.h  corfu_ordered_chain_smoke.cc  corfu_replica_store.cc  corfu_replica_store.h  corfu_replication_client.cc  corfu_replication_client.h  (+8 more)
test/: CMakeLists.txt  README.md  ack_rf_policy_test.cc  baseline_control_transport_test.cc  baseline_cxl_layout_test.cc  baseline_transport_equivalence_test.cc  chain_pipeline_test.cc  cxl_manager.cc  cxl_manager.h  durable_ack2_power_loss_model_test.cc  durable_frontier_test.cc  lazylog_latency_invariant_test.cc  lazylog_metadata_replica_test.cc  media_durability_process_restart_test.cc  nt_memcpy_test.cc  order5_publisher_rollover_test.cc  order5_recovery_property_test.cc  order5_session_fencing_test.cc  phase2_integration_test.cc  phase3_recovery_test.cc  publish_test.cc  replication_topology_test.cc  scalog_ack_invariant_test.cc  scalog_replication_rpc_durability_test.cc  segment_allocation_test.cc  session_entry_torn_read_test.cc  session_proto_roundtrip_test.cc  test_scalog_sequencer.cc  topic_manager.cc  topic_manager.h
(+1565 files in other folders)
